--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "purpel",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3500/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
     "@shopify/polaris": "^7.5.0",
@@ -9,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
